Sat Oct 30 06:32:52 2010  Tanaka Akira  <akr@fsij.org>

	* test/pathname/test_pathname.rb (TestPathname#test_grpowned?): the
	  group of the created file is inherited from the parent
	  directory on BSDs and MacOS X.  Linux also inherit the group if
	  the setgid bit of the directory is set.  It causes the test fail.
	  fixed by Shota Fukumori.  [ruby-dev:42458]

Sat Oct 30 05:58:54 2010  Tanaka Akira  <akr@fsij.org>

	* lib/resolv.rb: retry via TCP if UDP reply is truncated.
	  fixed by Julian Mehnle.  [ruby-core:32407]

Sat Oct 30 00:35:13 2010  Koichi Sasada  <ko1@atdot.net>

	* iseq.c (iseq_s_compile): fix optional argument.
	  a patch from Yutaka HARA [ruby-core:32953] [Ruby 1.9-Bug#4001]

Sat Oct 30 00:24:42 2010  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c (memsize_of): take care of
	  T_CLASS/const_tbl.
	  a patch from nagachika <nagachika00@gmail.com> [ruby-dev:42490]

Fri Oct 29 23:32:36 2010  Koichi Sasada  <ko1@atdot.net>

	* test/profile_test_all.rb: added.
	  You can use test-all profiler with the following command:
	    RUBY_TEST_ALL_PROFILE=true make test-all
	  This command generates ./test_all_profile and you can analyse
	  which tests consume memories.

	* test/runner.rb: ditto.

Fri Oct 29 10:02:03 2010  NARUSE, Yui  <naruse@ruby-lang.org>

	* tool/enc-unicode.rb,
	  enc/unicode/name2ctype.h, enc/unicode/name2ctype.h.blt,
	  enc/unicode/name2ctype.kwd, enc/unicode/name2ctype.src:
	  Add 'Unknown' Script.
	  patched by Run Paint Run Run. [ruby-core:32937] #3998

Fri Oct 29 05:13:34 2010  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/objspace.c (ObjectSpace.memsize_of_all): rename
	  ObjectSpace.total_memsize_of_all_objects() to
	  ObjectSpace.memsize_of_all([klass]).
	  Accept Class object to filter the objects.

	* test/objspace/test_objspace.rb: fix test for above change.

Fri Oct 29 03:04:16 2010  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* string.c (rb_str_dump): fix expected length. [ruby-core:32935]
