@@ -1,3 +1,9 @@
+Sat Oct 30 07:01:53 2010  Tanaka Akira  <akr@fsij.org>
+
+	* lib/resolv-replace.rb: suppress warning.
+
+	* lib/open-uri.rb: ditto.
+
 Sat Oct 30 06:32:52 2010  Tanaka Akira  <akr@fsij.org>
 
 	* test/pathname/test_pathname.rb (TestPathname#test_grpowned?): the
